// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FictionBody custom body  1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <h1
          className="fiction-title"
        >
          Les émotifs
        </h1>
        <div
          className="fiction-content"
        >
          
              &lt;p&gt;15 janvier 2050 : je suis assis paisiblement chez moi en train de lire un épisode de la série « Ceux qui restent »
              en version émotive. L’histoire me rend triste mais je la lis parce que j’y entrevois la profondeur des sentiments.
              Avant l’arrivée de la tablette sensorielle, quand les films et les séries n’avaient pas d’émo-description, je
              préférais les histoires écrites. Au moins dans les livres, les sentiments sont détaillés. Je les comprends. Je
              suis là, dans l’histoire, dans la vie des personnages, dans leur tête, dans leur âme. J’entre en introspection
              // pour sonder puis ranger dans les tiroirs de mon esprit les nouvelles émotions que je découvre.&lt;/p&gt;
          
              &lt;p&gt;Maintenant, avec les sous-titres c’est plus facile pour moi de regarder une vidéo : « Confusion indice 5 + Honte
              indice 1 » ; ou « Joie indice 3 + Nostalgie indice 2 » ; ou encore « Colère indice 8 + Amour indice 9 + Regret
              indice 4 » Ces idéogrammes qui apparaissent à chaque scène que je parcours du doigt, je sais les lire couramment
              maintenant. C’est comme du braille digital, mais pour les gens que le monde des interactions déroute. C’est généré
              par une IA qui analyse le format facial des inférences émotionnelles pour les traduire en émo-signes qui se
              dessinent et se déploient comme des fleurs sur l’écran. En lisant, je prends en moi la palette des émotions qui
              existent. Et j’apprends à lier le signe au sentiment. Cela me donne une sensation d’universalité qui se manifeste
              presque de façon physique. Comme un courant électrique qui me traverse. Très intime, personnel. Mais tellement
              collectif : je me sens comme tout le monde. J’appartiens moi aussi. Je peux entrer en interférence émotionnelle
              avec un univers de sensations, toucher le monde des impressions et des consciences humaines.&lt;/p&gt;
            
        </div>
      </div>
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          onClick={[Function]}
          style={
            Object {
              "background": "#28c",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div
          style={undefined}
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                FictionBody
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                custom body 
              </h2>
            </div>
            
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                className="css-4akams"
              >
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      fictionBody
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          title
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              Les émotifs
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          content
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              
                                  &lt;p&gt;15 janvier 2050 : je suis assis paisibleme…
                            </span>
                            "
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </div>
                <button
                  className="css-py33tc"
                  onClick={[Function]}
                >
                  <div
                    className="css-kv47nt"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": 6,
                        }
                      }
                    >
                      Copied!
                    </div>
                    <div>
                      Copy
                    </div>
                  </div>
                </button>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h2
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  fictionBody
                  " Component
                </h2>
                <table
                  className="css-1ytzlk7"
                >
                  <thead>
                    <tr>
                      <th
                        className="css-d52hbj"
                      >
                        property
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        propType
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        required
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        default
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        title
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          no title specified
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        content
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          no content specified
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FictionBody default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <h1
          className="fiction-title"
        >
          no title specified
        </h1>
        <div
          className="fiction-content"
        >
          no content specified
        </div>
      </div>
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          onClick={[Function]}
          style={
            Object {
              "background": "#28c",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div
          style={undefined}
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                FictionBody
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                default
              </h2>
            </div>
            
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                className="css-4akams"
              >
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      fictionBody
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </div>
                <button
                  className="css-py33tc"
                  onClick={[Function]}
                >
                  <div
                    className="css-kv47nt"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": 6,
                        }
                      }
                    >
                      Copied!
                    </div>
                    <div>
                      Copy
                    </div>
                  </div>
                </button>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h2
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  fictionBody
                  " Component
                </h2>
                <table
                  className="css-1ytzlk7"
                >
                  <thead>
                    <tr>
                      <th
                        className="css-d52hbj"
                      >
                        property
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        propType
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        required
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        default
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        title
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          no title specified
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        content
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          no content specified
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FictionBody playground 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <h1
          className="fiction-title"
        >
          Les émotifs
        </h1>
        <div
          className="fiction-content"
        >
          
              &lt;p&gt;15 janvier 2050 : je suis assis paisiblement chez moi en train de lire un épisode de la série « Ceux qui restent »
              en version émotive. L’histoire me rend triste mais je la lis parce que j’y entrevois la profondeur des sentiments.
              Avant l’arrivée de la tablette sensorielle, quand les films et les séries n’avaient pas d’émo-description, je
              préférais les histoires écrites. Au moins dans les livres, les sentiments sont détaillés. Je les comprends. Je
              suis là, dans l’histoire, dans la vie des personnages, dans leur tête, dans leur âme. J’entre en introspection
              // pour sonder puis ranger dans les tiroirs de mon esprit les nouvelles émotions que je découvre.&lt;/p&gt;
          
              &lt;p&gt;Maintenant, avec les sous-titres c’est plus facile pour moi de regarder une vidéo : « Confusion indice 5 + Honte
              indice 1 » ; ou « Joie indice 3 + Nostalgie indice 2 » ; ou encore « Colère indice 8 + Amour indice 9 + Regret
              indice 4 » Ces idéogrammes qui apparaissent à chaque scène que je parcours du doigt, je sais les lire couramment
              maintenant. C’est comme du braille digital, mais pour les gens que le monde des interactions déroute. C’est généré
              par une IA qui analyse le format facial des inférences émotionnelles pour les traduire en émo-signes qui se
              dessinent et se déploient comme des fleurs sur l’écran. En lisant, je prends en moi la palette des émotions qui
              existent. Et j’apprends à lier le signe au sentiment. Cela me donne une sensation d’universalité qui se manifeste
              presque de façon physique. Comme un courant électrique qui me traverse. Très intime, personnel. Mais tellement
              collectif : je me sens comme tout le monde. J’appartiens moi aussi. Je peux entrer en interférence émotionnelle
              avec un univers de sensations, toucher le monde des impressions et des consciences humaines.&lt;/p&gt;
            
        </div>
      </div>
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          onClick={[Function]}
          style={
            Object {
              "background": "#28c",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div
          style={undefined}
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                FictionBody
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                playground
              </h2>
            </div>
            
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                className="css-4akams"
              >
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      fictionBody
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          title
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              Les émotifs
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          content
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              
                                  &lt;p&gt;15 janvier 2050 : je suis assis paisibleme…
                            </span>
                            "
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </div>
                <button
                  className="css-py33tc"
                  onClick={[Function]}
                >
                  <div
                    className="css-kv47nt"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": 6,
                        }
                      }
                    >
                      Copied!
                    </div>
                    <div>
                      Copy
                    </div>
                  </div>
                </button>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h2
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  fictionBody
                  " Component
                </h2>
                <table
                  className="css-1ytzlk7"
                >
                  <thead>
                    <tr>
                      <th
                        className="css-d52hbj"
                      >
                        property
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        propType
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        required
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        default
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        title
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          no title specified
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        content
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          no content specified
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
